# Streamix

./: .env  .gitignore  .graphify_ast.json  .graphify_detect.json  .graphify_uncached.txt  README.md  anilix.py  anilix_1.0.0_all.deb  anilix_party.py  anilix_party_admin.py  anilix_party_client.py  anilix_server.py  backend.py  build_deb.py  client.py  config.py  host.py  main.py  party.py  party_config.py  party_input.py  pyproject.toml  setup.sh  voice_manager.py
scripts/: feature_smoke.py  mpv_dual_check.py  mpv_probe.py
src/: main.py
src/core/: config.py  paths.py
src/features/api_backend/: backend.py
src/features/voice_chat/: voice_manager.py
src/features/watch_party/: client.py  host.py  party.py  party_input.py
src/shared/: dependency_checker.py  discord_rpc.py  media.py
src/shared/assets/: banner.txt
src/shared/utils/: logger.py  os_detector.py
utils/: __init__.py
