[project]
name = "vibhas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "requests>=2.33.1",
    "rich>=14.3.4",
    "uvicorn>=0.44.0",
]
