[project]
name = "streamix"
version = "0.1.0"
description = "Terminal-based Watchparty Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pyngrok>=8.0.0",
    "pypresence>=4.6.1",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "requests>=2.33.1",
    "rich>=14.3.4",
    "sounddevice>=0.5.5",
    "textual>=1.2.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "yt-dlp>=2026.3.17",
]
